[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "propythia"
version = "3.0.0"
authors = [
  { name = "Ana Marta Sequeira", email = "id9417@alunos.uminho.pt" },
  { name = "Miguel Barros" },
  { name = "João Abreu" },
  { name = "Ivan Gomes" }
]

description = "Propythia - A platform for classification of peptides/proteins using machine and deep learning"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BioSystemsUM/propythia"
"Bug Tracker" = "https://github.com/BioSystemsUM/propythia/issues"
